# ai-notes-summarizer

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SYSTEM ARCHITECTURE.md  app.py  project report.md  pyproject.toml  requiremenets.txt  requriments.md  user_manual.md
