[project]
name = "ai-notes-summarizer"
version = "1.0.0"
description = "An AI-powered Notes Summarizer with Gemini AI and BYOK support."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit",
    "PyPDF2",
    "nltk",
    "sumy",
    "pandas",
    "numpy",
    "deep-translator",
    "python-dotenv",
    "google-generativeai",
]
